[gd_scene load_steps=48 format=3 uid="uid://d4a58tg3s4j0l"]

[ext_resource type="Script" uid="uid://b7vi0ytb4lhko" path="res://scenes/main_menu.gd" id="1_1ovvg"]
[ext_resource type="Texture2D" uid="uid://bec7df448qjea" path="res://assets/MenuScreens/mainmenufinal.png" id="2_umtaw"]
[ext_resource type="Texture2D" uid="uid://c54xfeu143uaw" path="res://assets/art/Bug.png" id="3_1ovvg"]
[ext_resource type="Texture2D" uid="uid://blh3tckdgwb0r" path="res://assets/UI/RedX.png" id="4_2mf3k"]
[ext_resource type="Theme" uid="uid://bpude2oeitoox" path="res://assets/Themes/Main_UI_Theme.tres" id="5_1h1tu"]
[ext_resource type="Texture2D" uid="uid://cjjw22r27mebd" path="res://assets/Logos/Toast Games Final.png" id="6_qk78y"]
[ext_resource type="Texture2D" uid="uid://b3stofpx3dcq8" path="res://assets/Sprite Sheets/Carn_Logo_Animated-Sheet_Fixed.png" id="7_1ovvg"]
[ext_resource type="Texture2D" uid="uid://dpn3vnjec682r" path="res://assets/UI/Checkmark.png" id="8_5cavg"]
[ext_resource type="AudioStream" uid="uid://me68qe0c7bh6" path="res://assets/allsound/Music/Carnival main menu.wav" id="9_hvsov"]
[ext_resource type="AudioStream" uid="uid://2xal2nrt8ey8" path="res://assets/allsound/SFX/Mainmenu Button hover sound.wav" id="10_kqol1"]
[ext_resource type="AudioStream" uid="uid://bf7r1ifmffkcm" path="res://assets/allsound/SFX/Mainmenu Button click sound.wav" id="11_rppvf"]
[ext_resource type="Texture2D" uid="uid://phvmuwdqfrhv" path="res://assets/Sprite Sheets/Toast_Games_Final-Sheet.png" id="12_1xk4j"]
[ext_resource type="AudioStream" uid="uid://da0ry1haukb0l" path="res://assets/allsound/SFX/Toastergames Jingle.wav" id="13_eg8d5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_umtaw"]
atlas = ExtResource("7_1ovvg")
region = Rect2(0, 0, 1770, 370)

[sub_resource type="AtlasTexture" id="AtlasTexture_ra4jo"]
atlas = ExtResource("7_1ovvg")
region = Rect2(1770, 0, 1770, 370)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mf3k"]
atlas = ExtResource("7_1ovvg")
region = Rect2(3540, 0, 1770, 370)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h1tu"]
atlas = ExtResource("7_1ovvg")
region = Rect2(5310, 0, 1770, 370)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk78y"]
atlas = ExtResource("7_1ovvg")
region = Rect2(7080, 0, 1770, 370)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy1o2"]
atlas = ExtResource("7_1ovvg")
region = Rect2(8850, 0, 1770, 370)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cavg"]
atlas = ExtResource("7_1ovvg")
region = Rect2(10620, 0, 1770, 370)

[sub_resource type="SpriteFrames" id="SpriteFrames_1ajci"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_umtaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ra4jo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mf3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h1tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk78y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy1o2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cavg")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_lgwnu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1ajci"]
atlas = ExtResource("12_1xk4j")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b55j"]
atlas = ExtResource("12_1xk4j")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pajh"]
atlas = ExtResource("12_1xk4j")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7ex8"]
atlas = ExtResource("12_1xk4j")
region = Rect2(960, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8gd2"]
atlas = ExtResource("12_1xk4j")
region = Rect2(1280, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_hstxw"]
atlas = ExtResource("12_1xk4j")
region = Rect2(1600, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_8egab"]
atlas = ExtResource("12_1xk4j")
region = Rect2(1920, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw5y6"]
atlas = ExtResource("12_1xk4j")
region = Rect2(2240, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_svtp6"]
atlas = ExtResource("12_1xk4j")
region = Rect2(2560, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dfpl"]
atlas = ExtResource("12_1xk4j")
region = Rect2(2880, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_qywvv"]
atlas = ExtResource("12_1xk4j")
region = Rect2(3200, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wgol"]
atlas = ExtResource("12_1xk4j")
region = Rect2(3520, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_1acrt"]
atlas = ExtResource("12_1xk4j")
region = Rect2(3840, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr8o3"]
atlas = ExtResource("12_1xk4j")
region = Rect2(4160, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_1a85y"]
atlas = ExtResource("12_1xk4j")
region = Rect2(4480, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5e0"]
atlas = ExtResource("12_1xk4j")
region = Rect2(4800, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_engjn"]
atlas = ExtResource("12_1xk4j")
region = Rect2(5120, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h3lr"]
atlas = ExtResource("12_1xk4j")
region = Rect2(5440, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj67d"]
atlas = ExtResource("12_1xk4j")
region = Rect2(5760, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vcge"]
atlas = ExtResource("12_1xk4j")
region = Rect2(6080, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip0br"]
atlas = ExtResource("12_1xk4j")
region = Rect2(6400, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyero"]
atlas = ExtResource("12_1xk4j")
region = Rect2(6720, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcusk"]
atlas = ExtResource("12_1xk4j")
region = Rect2(7040, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_4puye"]
atlas = ExtResource("12_1xk4j")
region = Rect2(7360, 0, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_q13xq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ajci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b55j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pajh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7ex8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8gd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hstxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8egab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw5y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svtp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dfpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qywvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wgol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1acrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr8o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a85y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_engjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h3lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dj67d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vcge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip0br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyero")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcusk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4puye")
}],
"loop": false,
"name": &"popUp",
"speed": 30.0
}]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ovvg")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(961, 541)
texture = ExtResource("2_umtaw")

[node name="Bug Button" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -132.0
offset_top = -162.0
offset_right = -4.0
offset_bottom = -19.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
icon = ExtResource("3_1ovvg")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -155.0
offset_bottom = 136.0
grow_horizontal = 0
action_mode = 0
icon = ExtResource("4_2mf3k")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.353646
anchor_top = 0.677778
anchor_right = 0.683854
anchor_bottom = 0.830556
grow_horizontal = 2
theme = ExtResource("5_1h1tu")
theme_override_font_sizes/font_size = 115
text = "Start Game"
metadata/_edit_use_anchors_ = true

[node name="Start2" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -284.0
offset_top = 763.0
offset_right = 330.0
offset_bottom = 928.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 115
text = "Load"
flat = true

[node name="Credits" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -222.0
offset_right = 215.0
offset_bottom = -11.0
grow_vertical = 0
icon = ExtResource("6_qk78y")
flat = true
icon_alignment = 1
expand_icon = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(958, 155)
scale = Vector2(0.629, 0.629)
sprite_frames = SubResource("SpriteFrames_1ajci")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.470412

[node name="ConfirmQuit" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="ConfirmQuit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.48, 0.192, 0.192, 1)

[node name="No" type="Button" parent="ConfirmQuit/ColorRect"]
layout_mode = 0
anchor_left = 0.191146
anchor_top = 0.599074
anchor_right = 0.407813
anchor_bottom = 0.943519
icon = ExtResource("4_2mf3k")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Yes" type="Button" parent="ConfirmQuit/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.603646
anchor_top = 0.549074
anchor_right = 0.824479
anchor_bottom = 0.938889
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource("8_5cavg")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ConfirmQuit/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0244792
anchor_top = 0.237963
anchor_right = 0.972396
anchor_bottom = 0.398148
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 130
text = "Are you sure you want to quit?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="CreditsScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CreditsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.478431, 0.192157, 0.192157, 1)
metadata/_edit_use_anchors_ = true

[node name="closeCredits" type="Button" parent="CreditsScreen/ColorRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -182.0
offset_bottom = 206.0
grow_horizontal = 0
icon = ExtResource("4_2mf3k")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="CreditsScreen/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.01308
anchor_bottom = 1.0
offset_right = -25.1136
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.01308, 1)
theme_override_font_sizes/font_size = 80
text = "Brendan Murphy
Producer, Sound & Environment Design

Cole Faker 
Programming & Design

Cole Genevick 
Art & Animation

Gabe Cazzolla
UI, Design, Art implementation"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_hvsov")
volume_db = 8.0

[node name="Button Hover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_kqol1")
volume_db = 9.905

[node name="Button Push" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_rppvf")
volume_db = 9.905

[node name="StartDelay" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1915.0
offset_bottom = 1111.0
color = Color(0, 0, 0, 1)

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_lgwnu")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="introScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="introScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="toasterAnim" type="AnimatedSprite2D" parent="introScreen"]
visible = false
position = Vector2(960, 454)
sprite_frames = SubResource("SpriteFrames_q13xq")
animation = &"popUp"

[node name="toasterLabel" type="Label" parent="introScreen"]
visible = false
layout_mode = 0
anchor_left = 0.300521
anchor_top = 0.60463
anchor_right = 0.678646
anchor_bottom = 0.694444
theme_override_font_sizes/font_size = 96
text = "TOASTER GAMES"
metadata/_edit_use_anchors_ = true

[node name="introTimer" type="Timer" parent="introScreen"]
wait_time = 1.8
autostart = true

[node name="fadeRect" type="ColorRect" parent="introScreen"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.00012207
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Jingle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_eg8d5")

[connection signal="pressed" from="Bug Button" to="." method="_on_bug_button_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="ConfirmQuit/ColorRect/No" to="." method="_on_no_pressed"]
[connection signal="pressed" from="ConfirmQuit/ColorRect/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="CreditsScreen/ColorRect/closeCredits" to="." method="_on_close_credits_pressed"]
[connection signal="timeout" from="StartDelay" to="." method="_on_start_delay_timeout"]
[connection signal="timeout" from="introScreen/introTimer" to="." method="_on_intro_timer_timeout"]
